change base java version to 11